feat: register info schema
